chore: openrewrite migration