@@ -71,7 +71,7 @@ public class LSMTreeIndexTest extends TestHelper {
 
         total++;
         assertThat(results).hasSize(1);
-        assertThat((int) results.get(0)).isEqualTo(i);
+        assertThat((int) results.getFirst()).isEqualTo(i);
       }
 
       assertThat(total).isEqualTo(TOT);
